Closed Bug 403748 Opened 17 years ago Closed 17 years ago

Correct misspellings in Calendar code

Categories

(Calendar :: Internal Components, defect)

defect
Not set
minor

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: sipaq, Assigned: sipaq)

References

Details

Attachments

(1 file)

http://lxr.mozilla.org/seamonkey/search?string=calandar
http://lxr.mozilla.org/seamonkey/search?string=calender

I'm a little worried about the two mozilla/calendar hits in the latter:

http://lxr.mozilla.org/seamonkey/source/calendar/base/public/calICalendarView.idl#61
http://lxr.mozilla.org/seamonkey/source/calendar/base/public/calIDecoratedView.idl#84

What would happen if we correct the misspelling? Would that expose bugs?

Daniel, mickey, mvl, could you please comment on that?
(In reply to comment #0)
> What would happen if we correct the misspelling? Would that expose bugs?
The implementation (i.e. the views) use the correct name (displayCalendar), this works because implementations in javascript don't get checked in any way against the interfaces. Since we don't have native call sites (i.e. c++ code that calls via the interfaces) this went by unnoticed. Unfortunately that's also the reason why correcting the misspelling won't magically fix any bugs, but nevertheless we should correct them for obvious reasons. Thanks for spotting that and reminding me that I want my compiler back... :-)
more misspellings that should be corrected if the file is touched:
indentifier -> identifier
indentify   -> identify
occurence   -> occurrence
Also ocurrence -> occurrence
Mickey, most of the changes only cover comments, but some also cover actual code. Therefore I'd ask to give this a thorough review.
Attachment #288730 - Flags: review?(michael.buettner)
Comment on attachment 288730 [details] [diff] [review]
Patch to fix known misspellings

looks good, thanks for taking care -> r=mickey.
Attachment #288730 - Flags: review?(michael.buettner) → review+
Checked in on HEAD and MOZILLA_1_8_BRANCH.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → 0.8
The checkin contains the following change that was not contained in the patch:

    +++ calendar/libical/src/libical/vcomponent.cpp
     int VComponent::get_status(){
             return (int)icalcomponent_get_status(imp);
     }
    -void VComponent::set_status(int v){
    +void VComponent::set_status(enum icalproperty_status v){
             icalcomponent_set_status(imp, v);
     }

Was this done by mistake or on purpose?
This was not done on purpose, but I'll leave that change in for now after discussing this with mvl on IRC:

<sipaq> when I committed my spelling-correction patch via cross-commit it also committed a code change in libical
[...]
<sipaq> mvl: my question is this: looking at the logs you updated libical on the branch twice
<sipaq> but never on the trunk
<sipaq> which probably caused the differences
<sipaq> my point is, that we should think about syncing branch and trunk for libical
<sipaq> if both were synced then this would never have happened
<mvl> well, that's just because cvs-import isn't exactly easy...
<mvl> it might be that i didn't do it perfectly, indeed
<mvl> but luckily, i need to do it again pretty soon
<sipaq> ok, I just wanted to confirm that this is indeed an issue
<mvl> but it surprises me that i only checked in on branch, while i used trunk back then
<mvl> well, i just looked at the logs
<mvl> erm, cvs-graph
<mvl> it might very well be that bonsai gets confused by cvs imports
[...]
<sipaq> what is the best course of action for me?
<sipaq> backout the unintended change?
<mvl> no
<mvl> don't touch it
<mvl> because it's not really a change
<mvl> my trunk-tree from before your checkin contains:
<mvl> void VComponent::set_status(enum icalproperty_status v){
<mvl> and I need to update anyway pretty soon
Checked all touched files, task is fixed and verified.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.