Bug 403748: Correct misspellings in Calendar code, r=mickey